# voice-type

./: README.md  pyproject.toml  requirements.txt  voice-type-wrapper.sh  voice_type.py
