[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-type"
version = "0.1.0"
description = "Voice-to-text transcription with OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
]

[project.scripts]
voice-type = "voice_type:main"
